--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <button onclick="users()">My User</button>
+    <ul id="users"></ul>
     <script src="./api.js"></script>
 </body>
 </html>
