--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <button onclick="users()">My User</button>
     <ul id="users"></ul>
-    <script src="./api.js"></script>
+    <script src="./js/api.js"></script>
 </body>
 </html>
