--- a/conutry-name.html
+++ b/conutry-name.html
@@ -5,6 +5,15 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Show the All Country Name</title>
+     <style>
+         #container{
+             display: flex;
+         }
+         #container>h1{
+             padding: 10px;
+             border: 2px solid green;
+         }
+     </style>
  </head>
  <body>
      <h2>In Wold All Country Name</h2>
@@ -22,9 +31,11 @@
              const container = document.getElementById('country');
             data.forEach(countryName => {
                 const head = document.createElement('h1');
-                head.innerText = ` Country Name: ${countryName.name.common}`;
+                head.innerText = `${countryName.name.common}`;
                 // console.log();
                 container.appendChild(head);
+                console.log(countryName);
+
             });
          }
      </script>
